[web] [fix] breadcrumb / ancestor wrap breaking layout
Summary: before after screenshot

Test Plan: make sure it looks like the screen shot

Reviewers: atul

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga

Differential Revision: https://phabricator.ashoat.com/D3139

--- a/web/chat/chat-thread-list.css
+++ b/web/chat/chat-thread-list.css
@@ -74,6 +74,8 @@ p.breadCrumbs.unread {
 }
 span.breadCrumb {
   padding-right: 4px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 span.breadCrumb svg {
